bugfix card position on mobile view - now centered

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body {
   justify-content: center;
   min-height: 100vh;
   background-color: #495057;
+  background-color: #868e96;
   position: relative;
 }
 
@@ -20,6 +21,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .logo {
@@ -122,6 +124,7 @@ form {
   color: #fff;
   cursor: pointer;
   text-transform: uppercase;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .btn--logo {
@@ -176,6 +179,7 @@ form {
   padding: 5px;
   border-radius: 5px;
   cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .download img {
@@ -198,7 +202,24 @@ h4 {
   margin-bottom: 0;
 }
 
+.download:hover,
+.download:focus,
+.download:active {
+  background: unset;
+  background-color: rgba(252, 70, 107, 1);
+}
+
+.form--btn:hover,
+.form--btn:focus,
+.form--btn:active {
+  background: unset;
+  background-color: rgba(252, 70, 107, 1);
+}
+
 @media (max-width: 500px) {
+  #root {
+    box-shadow: unset;
+  }
   html {
     background: linear-gradient(
       60deg,
@@ -217,6 +238,7 @@ h4 {
     width: 100%;
     background: unset;
     min-height: 100vh;
+    gap: 50px;
   }
 
   header {
@@ -289,17 +311,32 @@ h4 {
     bottom: 25px;
     background: unset;
     background-color: #e9ecef;
+    border: 1px solid #212529;
   }
 
   .download img {
     filter: brightness(1) invert(0);
   }
+
+  .download:hover,
+  .download:focus,
+  .download:active {
+    background: unset;
+    background-color: #ffc078;
+  }
+
+  .form--btn:hover,
+  .form--btn:focus,
+  .form--btn:active {
+    background: unset;
+    background-color: #ffc078;
+  }
 }
 
 @media (max-width: 420px) {
   header {
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
   form {
     grid-template: 40px 40px 40px / 1fr;
@@ -312,6 +349,7 @@ h4 {
 
   .meme-container {
     justify-content: flex-start;
+    height: 360px;
   }
 
   .download {
